# FastAPI-XKit

./: MANIFEST.in  README.md  README_UPDATE.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml
examples/: app.py  app_full.py  run.sh
fastapixkit/: __init__.py  config.py  health.py  setup.py
fastapixkit/middleware/: audit_db.py  otel.py  rate_limit.py  request_id.py
fastapixkit/security/: jwt.py  rbac.py
tests/: test_jwt.py  test_rate_limit_redis.py  test_rbac.py
